Updated source of input files to README.

--- a/README
+++ b/README
@@ -5,4 +5,4 @@ There are 3 examples:
 2. Job Salary: lists the cities in order of popularity according to the number of people employed.
 3. Titanic Data Set: lists the number of people at various ages who died on the Titanic.
 
-The data sets are sourced from Kaggle and CS246 Stanford Data Mining Course.
+The data sets are sourced from Kaggle & CS246 Stanford Data Mining Course.
